--- a/sahil-poc/db/.env
+++ b/sahil-poc/db/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://rdbmss:rdbmss@cluster0.ngnyh.mongodb.net/rdbms-db?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://rdbmss:<password>@cluster0.ngnyh.mongodb.net/<db_name>?retryWrites=true&w=majority
